﻿============================== 2018-07-01 ==============================

  !!! format modification !!! 
    'range' key in dispersion formulas replaced by 'wavelength_range'
    clean-up and expansion of "SPECS": YAML flexibility allows to include more data and organize it better than Zemax materials catalog file format (.agf)
  new data (thanks to Samuel Philippian, IL, USA!)  
    main/Ir/Hass-40C.yml
    main/Ir/Hass-3000C.yml
    main/Os/Nemoshkalenko-o.yml
    main/Os/Nemoshkalenko-e.yml
  new data (thanks to Kimberly Clifton, LightPath Technologies, Inc., Orlando, FL, USA!)  
    glass/lightpath/BD6.yml
  new data (thanks to Tobias König for submitting data!)
    organic/(C6H11NO)n - poly(N-isopropylacrylamide)/Brasse.yml
  new data (thanks to Larry Heki for suggesting data!)
    other/liquid crystals/E7/Tkachenko-o.yml
    other/liquid crystals/E7/Tkachenko-e.yml
    other/liquid crystals/5CB/Tkachenko-o.yml
    other/liquid crystals/5CB/Tkachenko-e.yml
  new data (thanks to Gintaras Tamošauskas, Vilnus University, Lithuania, for suggesting data!)
    main/BaB2O4/Tamosauskas-o.yml
    main/BaB2O4/Tamosauskas-e.yml
  new data (thanks to Malte Vogt, Institute for Solar Energy Research in Hamelin, Germany, for providing numerical data in YAML format!)
    other/commercial plastics/EVASKY S87/Vogt.yml
    other/commercial plastics/EVASKY S88/Vogt.yml
    other/anti-reflective coatings/SiN/Vogt-1.91.yml
    other/anti-reflective coatings/SiN/Vogt-2.09.yml
    other/anti-reflective coatings/SiN/Vogt-2.13.yml
    glass/misc/soda-lime/Vogt-5ppm.yml
    glass/misc/soda-lime/Vogt-10ppm.yml
    glass/misc/soda-lime/Vogt-703ppm.yml
  new data (thanks to Arkadiusz Ciesielski, University of Warsaw, Poland, for providing numerical data in YAML format!)
    main/Ag/Ciesielski.yml
    main/Ag/Ciesielski-Ge.yml
    main/Ag/Ciesielski-Ni.yml
    main/Au/Ciesielski.yml
    main/Au/Ciesielski-Ge.yml
    main/Ge/Ciesielski-20nm
    main/Ge/Ciesielski-20nm