@@ -1,0 +1,48 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "C. Yim, M. O'Brien, N. McEvoy, S. Winters, I. Mirza, J. G. Lunney and G. S. Duesberg. Investigation of the optical properties of MoS<sub>2</sub> thin films using spectroscopic ellipsometry, <a href=\"https://doi.org/10.1063/1.4868108\"><i>Appl. Phys. Let.</i> <b>104</b>, 103114 (2014)</a>"
+COMMENTS: "19.88 0.05 nm film synthesized by vapor phase sulfurization. ~290 nm thick SiO<sub>2</sub> substrate thermally grown on <100> oriented crystalline Si wafer."
+DATA:
+  - type: tabulated n
+    data: |
+        0.381514 2.39671
+        0.405058 3.05240
+        0.420636 3.40763
+        0.444958 4.12678
+        0.461636 4.64557
+        0.476379 4.91880
+        0.493610 4.85572
+        0.518094 4.57462
+        0.565865 4.12130
+        0.598976 4.04021
+        0.629650 4.19537
+        0.663614 4.46871
+        0.698508 4.50563
+        0.733987 4.43343
+        0.884671 4.17153
+  - type: tabulated k
+    data: |
+        0.382938 2.88740
+        0.395877 3.08416
+        0.413525 3.13992
+        0.438230 3.13448
+        0.450287 3.03662
+        0.462177 2.74243
+        0.479851 2.13547
+        0.501985 1.55310
+        0.523979 1.20383
+        0.549173 1.09384
+        0.583042 1.13732
+        0.611299 1.27883
+        0.634165 1.32207
+        0.658836 1.24875
+        0.702218 0.930205
+        0.765774 0.605646
+        0.889147 0.428648
+SPECS:
+    n_absolute: true
+    wavelength_vacuum: true
+    film_thickness: 19.88 nm
+    substrate: SiO2/Si
