@@ -1,0 +1,50 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "C. Yim, M. O'Brien, N. McEvoy, S. Winters, I. Mirza, J. G. Lunney and G. S. Duesberg. Investigation of the optical properties of MoS<sub>2</sub> thin films using spectroscopic ellipsometry, <a href=\"https://doi.org/10.1063/1.4868108\"><i>Appl. Phys. Let.</i> <b>104</b>, 103114 (2014)</a>"
+COMMENTS: "3.01 0.07 nm film synthesized by vapor phase sulfurization. ~290 nm thick SiO<sub>2</sub> substrate thermally grown on <100> oriented crystalline Si wafer."
+DATA:
+  - type: tabulated n
+    data: |
+        0.382417 2.16040
+        0.396592 2.51564
+        0.416745 2.91656
+        0.434018 3.27182
+        0.459558 3.64550
+        0.473278 3.60961
+        0.492746 3.47388
+        0.523764 3.10205
+        0.548934 2.95726
+        0.571265 2.96688
+        0.591157 3.25823
+        0.606431 3.56764
+        0.628912 3.74081
+        0.652291 3.70488
+        0.728738 3.47881
+        0.888102 3.37157
+  - type: tabulated k
+    data: |
+        0.382127 1.89574
+        0.400486 2.03104
+        0.416791 1.99480
+        0.433725 1.87283
+        0.449618 1.65896
+        0.467191 1.24305
+        0.485216 0.961825
+        0.507273 0.803095
+        0.532553 0.840303
+        0.549190 1.00590
+        0.578202 1.34921
+        0.593541 1.47189
+        0.603760 1.41693
+        0.622144 1.22126
+        0.643379 0.964387
+        0.674322 0.762708
+        0.725091 0.653029
+        0.887428 0.691040
+SPECS:
+    n_absolute: true
+    wavelength_vacuum: true
+    film_thickness: 3.01 nm
+    substrate: SiO2/Si
