@@ -2352,15 +2352,15 @@
         - PAGE: Zhang
           name: "Zhang et al. 2015: monolayer film; n,k 0.40-0.75 µm"
           data: "main/MoS2/Zhang.yml"
-        - PAGE: Yim-1.99um
-          name: "Yim et al. 2014: 1.99-µm film; n,k 0.38-0.90 µm"
-          data: "main/MoS2/Yim-1.99um.yml"
-        - PAGE: Yim-3.01um
-          name: "Yim et al. 2014: 3.01-µm film; n,k 0.38-0.90 µm"
-          data: "main/MoS2/Yim-3.01um.yml"
-        - PAGE: Yim-19.88um
-          name: "Yim et al. 2014: 19.88-µm film; n,k 0.38-0.90 µm"
-          data: "main/MoS2/Yim-19.88um.yml"
+        - PAGE: Yim-2nm
+          name: "Yim et al. 2014: 2-nm film; n,k 0.38-0.90 µm"
+          data: "main/MoS2/Yim-2nm.yml"
+        - PAGE: Yim-3nm
+          name: "Yim et al. 2014: 3-nm film; n,k 0.38-0.90 µm"
+          data: "main/MoS2/Yim-3nm.yml"
+        - PAGE: Yim-20nm
+          name: "Yim et al. 2014: 20-nm film; n,k 0.38-0.90 µm"
+          data: "main/MoS2/Yim-20nm.yml"
     - BOOK: PbS
       name: "PbS (Lead sulfide)"
       info: "main/PbS.html"
