@@ -1,5 +1,10 @@
 ﻿============================== 2018-07-01 ==============================
 
+  updated data (thanks to Omer Luria!)
+    main/MoS2/Yim*.yml: fix film thickness unit and rename files respectively, info, specs
+
+============================== 2018-07-01 ==============================
+
   !!! format modification !!! 
     'range' key in dispersion formulas replaced by 'wavelength_range'
     clean-up and expansion of "SPECS": YAML flexibility allows to include more data and organize it better than Zemax materials catalog file format (.agf)
